<?xml version="1.0"?>
<package>
  <name>apiai_ros</name>
  <version>0.0.0</version>
  <description>No description available</description>

  <maintainer email="todo@tue.nl">todo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>audio_common_msgs</build_depend>
  <run_depend>audio_common_msgs</run_depend>

</package>
